--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/server.js"
+    "start": "node ./server/index.js"
   },
   "dependencies": {
     "bluebird": "^3.4.7",
@@ -14,6 +14,7 @@
     "express": "~4.14.0",
     "hbs": "~4.0.1",
     "lodash": "^4.17.4",
+    "mongoose": "^4.8.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   },
@@ -23,6 +24,7 @@
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
+    "errorhandler": "^1.5.0",
     "eslint": "^3.13.1",
     "nodemon": "^1.11.0"
   }
