--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "start": "node ./server/index.js"
   },
   "dependencies": {
+    "@angular/common": "^2.4.5",
+    "@angular/compiler": "^2.4.5",
+    "@angular/compiler-cli": "^2.4.5",
+    "@angular/core": "^2.4.5",
+    "@angular/forms": "^2.4.5",
+    "@angular/http": "^2.4.5",
+    "@angular/platform-browser": "^2.4.5",
+    "@angular/platform-browser-dynamic": "^2.4.5",
+    "@angular/platform-server": "^2.4.5",
+    "@angular/router": "^3.4.5",
+    "@angular/upgrade": "^2.4.5",
     "bluebird": "^3.4.7",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+    "core-js": "^2.4.1",
     "debug": "~2.2.0",
     "dotenv": "^4.0.0",
     "express": "~4.14.0",
@@ -16,16 +28,28 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.8.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "rxjs": "^5.0.3",
+    "serve-favicon": "~2.3.0",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.35",
+    "@types/node": "^7.0.4",
+    "angular2-router-loader": "^0.3.4",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
+    "del-cli": "^0.2.1",
     "errorhandler": "^1.5.0",
     "eslint": "^3.13.1",
-    "nodemon": "^1.11.0"
+    "html-loader": "^0.4.4",
+    "nodemon": "^1.11.0",
+    "typescript": "^2.1.5",
+    "webpack": "^2.1.0-beta.21",
+    "webpack-merge": "^2.6.1"
   }
 }
