--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./server/index.js",
     "clean": "del-cli .tmp",
     "build": "npm run clean && npm run build:server && npm run build:client",
-    "build:client": "webpack --config webpack.config.dev.js --progress --profile --watch",
+    "build:client": "webpack --config webpack.config.dev.js --progress --colors --profile --watch",
     "build:server": "babel -d .tmp/server ./server -s",
     "watch:server": "nodemon ./server/index.js"
   },
