--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./server/index.js",
-    "clean": "del-cli .tmp",
+    "clean": "del-cli .tmp && del-cli dist",
     "build": "npm run clean && npm run build:server && npm run build:client",
     "build:client": "webpack --config webpack.config.dev.js --progress --colors --profile --watch",
     "build:server": "babel -d .tmp/server ./server -s",
+    "build:prod": "del-cli dist/client/app/js && ngc -p tsconfig.aot.json && ngc -p tsconfig.aot.json && webpack --config webpack.config.prod.js --progress --profile --bail && del-cli 'dist/client/app/js/**/*.js' 'dist/client/app/js/**/*.js.map' '!dist/client/app/js/bundle.js' '!dist/client/app/js/*.chunk.js' 'client/app/**/*.ngfactory.ts' 'client/app/**/*.ngsummary.json' 'client/app/**/*.ngstyle.ts' 'client/app/**/*.shim.ts'",
     "watch:server": "nodemon ./server/index.js"
   },
   "dependencies": {
