--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build: . # specify directory of the Dockerfile
     ports:
       - "3000:3000"
+    links:
+      - database # link service to database service
 
   database:
     image: mongo
