Implement nodemon in docker compose start up
- Create a volume to mount app files to host
to enable nodemon to watch for changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build: . # specify directory of the Dockerfile
     ports:
       - "3000:3000"
+    volumes:
+      - .:/usr/src/app
     links:
       - database # link service to database service
 
