--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "raw-loader": "^0.5.1",
     "typescript": "^2.1.5",
     "webpack": "^2.1.0-beta.21",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^2.3.0",
+    "webpack-hot-middleware": "^2.17.0",
     "webpack-merge": "^2.6.1"
   }
 }
