--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,17 @@
     "compileOnSave": false,
     "compilerOptions": {
         "module": "commonjs",
+        "moduleResolution": "node",
         "target": "es5",
         "noImplicitAny": false,
-        "sourceMap": false,
+        "sourceMap": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true
     },
     "exclude": [
         "node_modules",
-        "dist"
+        "dist",
+        ".tmp",
+        "server"
     ]
 }
