--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/core": "^2.4.5",
     "@angular/forms": "^2.4.5",
     "@angular/http": "^2.4.5",
-    "@angular/material": "^2.0.0-beta.1",
+    "@angular/material": "^2.0.0-beta.2",
     "@angular/platform-browser": "^2.4.5",
     "@angular/platform-browser-dynamic": "^2.4.5",
     "@angular/platform-server": "^2.4.5",
@@ -39,6 +39,7 @@
     "debug": "~2.2.0",
     "dotenv": "^4.0.0",
     "express": "~4.14.0",
+    "hammerjs": "^2.0.8",
     "hbs": "~4.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.8.0",
