--- a/package.json
+++ b/package.json
@@ -68,8 +68,10 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
+    "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.2",
     "source-map-loader": "^0.1.6",
     "typescript": "^2.1.5",
     "uglifyjs-webpack-plugin": "^0.2.1",
